--- a/Strona/index.html
+++ b/Strona/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link  rel="stylesheet" href="css.css" type="text/css" />
 </head>
 <body>
 
